/* Protobuf protocol for the export and import of SLH-DSA
 *
 * Copyright (C) 2024, Stephan Mueller <smueller@chronox.de>
 *
 * License: see LICENSE file in root directory
 *
 * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
 * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, ALL OF
 * WHICH ARE HEREBY DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE
 * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
 * OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
 * USE OF THIS SOFTWARE, EVEN IF NOT ADVISED OF THE POSSIBILITY OF SUCH
 * DAMAGE.
 */

syntax = "proto3";

message SlhDsaKeygenDataMsg {
	bytes sk_seed = 1;
	bytes sk_prf = 2;
	bytes pk_seed = 3;
	bytes pk = 4;
	bytes sk = 5;
	uint64 cipher = 6;
}

message SlhDsaSiggenDataMsg {
	bytes msg = 1;
	bytes sig = 2;
	bytes rnd = 3;
	bytes sk = 4;
	uint64 cipher = 5;
}

message SlhDsaSigverDataMsg {
	bytes msg = 1;
	bytes sig = 2;
	bytes pk = 3;
	uint64 cipher = 4;
	uint32 sigver_success = 5;
}
